# 3dgs

./: README.md  pyproject.toml  requirements.txt  test_wrong_implementations.py
src/: renderer.py
